# tessera

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: arm-cortex-m4.cmake
docs/: ARCHITECTURE.md  DESIGN-NOTES.md  EMWIN.md  PORTING.md
include/tessera/: cache.h  grid.h  map.h  marker.h  port.h  projection.h  queue.h  types.h  view.h
port/cmsis-rtos/: tessera_rtos.c  tessera_rtos.h
port/cmsis-rtos/interop/: cmsis_os.h  cmsis_os_pthread.c
port/emwin/: tessera_emwin.c  tessera_emwin.h
port/emwin/interop/: README.md  emwin_probe.c  emwin_probe.h  tessera_emwin_api.h
port/fatfs/: tessera_fatfs.c  tessera_fatfs.h
port/fatfs/interop/: ff.h  ff_stdio.c
port/framebuffer/: framebuffer.c  framebuffer.h
src/: cache.c  grid.c  map.c  marker.c  projection.c  queue.c  types.c  view.c
tests/: check.h  demo.c  fixture.h  test_cache.c  test_grid.c  test_map.c  test_marker.c  test_ports.c  test_projection.c  test_queue.c  test_types.c  test_view.c
tools/: check-all.sh
